--- a/options.html
+++ b/options.html
@@ -19,8 +19,8 @@
 		<h1>VT Extension</h1>
 	</header>
 	<div id="menu">
+		<h2>Course Registration</h2>
 		<form name="ttform">
-			<h2>Course Registration</h2>
 			<table>
 				<tr>
 					<th>Campus</th>
@@ -38,9 +38,50 @@
 		</form>
 	</div>
 	<hr />
-	<div id="container">
+	<div id="container" style="display:none;">
+		<h3>Watched Courses</h3>
+		<div></div>
+		<hr />
+		<h3>All Courses</h3>
+		<div id="courses-section">
+			<table style="width:100%">
+				<thead>
+					<tr>
+						<th>&nbsp;</th>
+						<th>CRN</th>
+						<th>Course Title</th>
+						<th>Type</th>
+						<th>Credits</th>
+						<th>Capacity</th>
+						<th>Instructor</th>
+						<th>Days</th>
+						<th>Begin</th>
+						<th>End</th>
+						<th>Location</th>
+					</tr>
+				</thead>
+				<tbody id="tbody">
+					<script id="template" type="text/x-handlebars-template">
+						<tr data-orig='{{json this}}'>
+							<td><input type="checkbox" /></td>
+							<td>{{CRN}}</td>
+							<td>{{Course}} - {{Title}}</td>
+							<td>{{Type}}</td>
+							<td>{{Cr}}</td>
+							<td>{{Seats}}/{{Capacity}}</td>
+							<td>{{Instructor}}</td>
+							<td>{{Days}}</td>
+							<td>{{Begin}}</td>
+							<td>{{End}}</td>
+							<td>{{Location}}</td>
+						</tr>
+					</script>
+				</tbody>
+			</table>
+		</div>
 	</div>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/handlebars.min.js"></script>
 	<script type="text/javascript" src="js/background.js"></script>
 </body>
 </html>
