minor fixes in formating

--- a/index.html
+++ b/index.html
@@ -51,14 +51,9 @@
 					<h4>Preferences</h4>
 				</div>
 				<div class="course-section-table note">
+				<form name="ttform">
 					<div class="section">
 						<table>
-							<colgroup>
-								<col width="20%"></col>
-								<col width="20%"></col>
-								<col width="45%"></col>
-								<col></col>
-							</colgroup>
 							<tbody>
 								<tr>
 									<th>Campus</th>
@@ -80,6 +75,7 @@
 							</tbody>
 						</table>
 					</div>
+				</form>
 				</div>
 			</section>
 				<section id="observed-courses" class="course-section">
@@ -167,18 +163,11 @@
 				</div>
 				<div id="footer" class="note">
 					<div class="left">
-						© 2015 Virginia Polytechnic Institute and State University.
+						Created by DedoCibula
 					</div>
-					<div class="right">
-						Accounts: 1.5.9.2
-					</div> <br>
-					<div class="right">
-						<a href="https://my.vt.edu/accounts/faq.html">Help</a> |
-						<a href="https://my.vt.edu/accounts/legal.html">Legal</a>
-					</div>  
 					<div class="clear"></div>
 				</div>
-			<div id="menu">
+<!-- 			<div id="menu">
 				<h2>Course Registration</h2>
 				<form name="ttform">
 					<table>
@@ -196,7 +185,7 @@
 						</tr>
 					</table>
 				</form>
-			</div>
+			</div> -->
 			<hr />
 			<div id="container" style="display:none;">
 				<h3>Watched Courses</h3>
