minor tweaks and junk removal

--- a/index.html
+++ b/index.html
@@ -6,28 +6,6 @@
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/handlebars.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui.min.js"></script>
-	<style type="text/css">
-	/*body {
-		font-family: Arial, sans-serif;
-    	font-size: 80%
-	}
-	th, td {
-		vertical-align: top;
-		text-align: left;
-		padding-right: 10px;
-	}
-	#container table {
-		width: 100%;
-		border-collapse: collapse;
-	}
-	#container td {
-		border: 1px solid;
-	}
-	#container tbody tr:hover {
-		background-color: #ffff99; 
-		cursor: pointer;
-	}*/
-	</style>
 	<title>VT Extension</title>
 </head>
 <body>
@@ -67,7 +45,7 @@
 										<td id="subj-container"></td>
 										<td>
 											<div class="buttons right">
-						        				<a href="/accounts/myaccounts/email/407412/addresses">Search Courses</a>
+						        				<a href="#">Search Courses</a>
 												<div class="clear"></div>
 						    				</div>
 						    			</td>
