--- a/index.html
+++ b/index.html
@@ -130,6 +130,6 @@
 			<div class="clear"></div>
 		</div>
 	</div>
-	<script type="text/javascript" src="js/background.js"></script>
+	<script type="text/javascript" src="js/options.js"></script>
 </body>
 </html>
