rearranged files, added necessary files

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/handlebars.min.js"></script>
-	<script type="text/javascript" src="js/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="js/libs/jquery.min.js"></script>
+	<script type="text/javascript" src="js/libs/handlebars.min.js"></script>
+	<script type="text/javascript" src="js/libs/jquery-ui.min.js"></script>
 	<title>VT Extension</title>
 </head>
 <body>
