minor fixes in "old" option page (will be reused)

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										<td id="subj-container"></td>
 										<td>
 											<div class="buttons right">
-						        				<a href="#">Search Courses</a>
+						        				<a id="submit" href="#">Search Courses</a>
 												<div class="clear"></div>
 						    				</div>
 						    			</td>
