--- a/index.html
+++ b/index.html
@@ -131,5 +131,6 @@
 		</div>
 	</div>
 	<script type="text/javascript" src="js/options.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
