added global listeners setup for main.js

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 									<td id="subj-container"></td>
 									<td>
 										<div class="buttons right">
-					        				<a id="submit" href="#">Search Courses</a>
+					        				<a id="submit-preferences" href="#">Search Courses</a>
 											<div class="clear"></div>
 					    				</div>
 					    			</td>
