added on-site notifications

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<div class="clear"></div>
 		</div>
 		<div id="content">
+			<div id="notification-container"></div>
 			<section id="preferences" class="course-section">
 				<div class="course-section-name">
 					<h4>Preferences</h4>
@@ -45,10 +46,10 @@
 									<td id="subj-container"></td>
 									<td>
 										<div class="buttons right">
-					        				<a id="submit-preferences" href="#">Search Courses</a>
+											<a id="submit-preferences" href="#">Search Courses</a>
 											<div class="clear"></div>
-					    				</div>
-					    			</td>
+										</div>
+									</td>
 								</tr>
 							</tbody>
 						</table>
